--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -5,3 +5,4 @@ ENV HOME $JENKINS_HOME
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
 RUN /usr/local/bin/install-plugins.sh  < /usr/share/jenkins/ref/plugins.txt
 COPY security.groovy /usr/share/jenkins/ref/init.groovy.d/security.groovy
+COPY init_jobs.groovy /usr/share/jenkins/ref/init.groovy.d/
